# diploma

./: .gitignore  CMakeLists.txt  LangGr.json  automata.cpp  automata.h  cf_analyzer.cpp  cf_analyzer.h  cf_analyzer_session.cpp  cf_analyzer_session.h  cf_grammar.cpp  cf_grammar.h  data.qrc  diploma_mainwindow.cpp  diploma_mainwindow.h  diploma_mainwindow.ui  main.cpp  regExPlus.cpp  regExPlus.h  waitingspinnerwidget.h
Data/Saves/: Grammar5.txt  Grammar9.txt
QSidePanel/QSidePanel/: PanelLeftSide.cpp
